Fixed meals not showing for seller, made css a little bit better

--- a/src/pages/profile/style.css
+++ b/src/pages/profile/style.css
@@ -3,6 +3,11 @@
     font-size: 15px;
 }
 
+.seller-profile-wrappe {
+    display: grid;
+    width: 100vh;
+}
+
 h1 {
     color: rgb(0, 0, 0);
     font-size: 50px;
